feat():added reminder events to display on calendar