@@ -2,120 +2,148 @@ package in.mariasorganics.inventorytracker.service.impl;
 
 import in.mariasorganics.inventorytracker.dto.RoomMaterialPlanDTO;
 import in.mariasorganics.inventorytracker.dto.SupplierOrderLineDTO;
-import in.mariasorganics.inventorytracker.entity.GrowRoom;
-import in.mariasorganics.inventorytracker.entity.InventoryItem;
-import in.mariasorganics.inventorytracker.entity.ProductionCycle;
-import in.mariasorganics.inventorytracker.entity.SupplierMapping;
-import in.mariasorganics.inventorytracker.repository.GrowRoomRepository;
-import in.mariasorganics.inventorytracker.repository.InventoryItemRepository;
-import in.mariasorganics.inventorytracker.repository.ProductionCycleRepository;
-import in.mariasorganics.inventorytracker.repository.SupplierMappingRepository;
+import in.mariasorganics.inventorytracker.entity.*;
+import in.mariasorganics.inventorytracker.repository.*;
 import in.mariasorganics.inventorytracker.service.IOrderPlanningService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDate;
 import java.util.*;
-import java.util.stream.Collectors;
 
 /**
- * Generates a per‑room material plan that **always lists every inventory
- * item**.
- * <ul>
- * <li>If no supplier mapping exists, a single line is shown with “—”.</li>
- * <li>If no short‑fall exists, the line is still rendered (shortfall = 0).</li>
- * <li>Lead‑time comes from <code>Supplier.averageLeadTimeInDays</code>.</li>
- * <li>The order date is <code>nextIdealInoculationDate – leadTime</code>.</li>
- * </ul>
+ * Builds a room‑wise purchase plan that **always shows every inventory item** –
+ * even when no supplier is mapped or no short‑fall exists.  
+ * A button in the view lets the user add / remove a reminder for each line;  
+ * that state is surfaced via {@code SupplierOrderLineDTO.reminderExists}.
  */
 @Service
 @RequiredArgsConstructor
 public class OrderPlanningServiceImpl implements IOrderPlanningService {
 
-    private final GrowRoomRepository growRoomRepo;
-    private final InventoryItemRepository inventoryRepo;
+    private final GrowRoomRepository        growRoomRepo;
+    private final InventoryItemRepository   inventoryRepo;
     private final ProductionCycleRepository cycleRepo;
     private final SupplierMappingRepository mappingRepo;
+    private final OrderReminderRepository   reminderRepo;   // ← NEW
+
+    // --------------------------------------------------------------------- //
+    //  Public API
+    // --------------------------------------------------------------------- //
 
     @Override
     public List<RoomMaterialPlanDTO> generateRoomWiseOrderPlan() {
-        List<GrowRoom> rooms = growRoomRepo.findAll();
-        List<InventoryItem> inventory = inventoryRepo.findAll();
-        List<ProductionCycle> allCycles = cycleRepo.findAll();
 
-        List<RoomMaterialPlanDTO> plans = new ArrayList<>();
+        List<GrowRoom>        rooms      = growRoomRepo.findAll();
+        List<InventoryItem>   allItems   = inventoryRepo.findAll();
+        List<ProductionCycle> allCycles  = cycleRepo.findAll();
+
+        List<RoomMaterialPlanDTO> result = new ArrayList<>();
 
         for (GrowRoom room : rooms) {
-            // 🔎 only ACTIVE cycles for this room
+
+            // --- pick ACTIVE cycles for this room -----------------------------------------
             List<ProductionCycle> roomCycles = allCycles.stream()
-                    .filter(c -> c.getGrowRoom().getId().equals(room.getId()))
+                    .filter(c -> Objects.equals(c.getGrowRoom().getId(), room.getId()))
                     .filter(c -> "ACTIVE".equalsIgnoreCase(c.getStatus()))
                     .sorted(Comparator.comparing(ProductionCycle::getInoculationEndDate).reversed())
-                    .collect(Collectors.toList());
+                    .toList();
 
-            if (roomCycles.isEmpty()) {
-                // skip rooms that aren’t in production
-                continue;
-            }
+            if (roomCycles.isEmpty()) continue;               // idle room – skip
 
-            // last (most‑recent) inoculation‑end ‑> ideal next start = +1 day
-            LocalDate lastEnd = roomCycles.stream()
+            // --- derive “next ideal inoculation start” ------------------------------------
+            LocalDate lastInocEnd = roomCycles.stream()
                     .map(ProductionCycle::getInoculationEndDate)
                     .filter(Objects::nonNull)
                     .findFirst()
                     .orElse(LocalDate.now());
 
-            LocalDate nextIdealDate = lastEnd.plusDays(1);
+            LocalDate nextIdealStart = lastInocEnd.plusDays(1);
+
+            // --- build order lines --------------------------------------------------------
             List<SupplierOrderLineDTO> orderLines = new ArrayList<>();
 
-            for (InventoryItem item : inventory) {
-                double required = estimateRequirement(item, roomCycles); // could be 0
-                double available = item.getQuantity();
-                double shortfall = Math.max(0, required - available);
+            for (InventoryItem item : allItems) {
+
+                double required   = estimateRequirement(item, roomCycles);
+                double available  = item.getQuantity();
+                double shortfall  = Math.max(0, required - available);
 
                 List<SupplierMapping> mappings = mappingRepo.findByItem(item);
 
                 if (mappings.isEmpty()) {
-                    // show a placeholder row so the material is visible
-                    orderLines.add(blankLine(item, required, available, shortfall, nextIdealDate));
-                } else {
-                    for (SupplierMapping m : mappings) {
-                        int lead = m.getSupplier().getAverageLeadTimeInDays();
-                        orderLines.add(SupplierOrderLineDTO.builder()
-                                .itemName(item.getName())
-                                .unit(item.getUnit().toString())
-                                .requiredQty(required)
-                                .availableQty(available)
-                                .shortfall(shortfall)
-                                .supplierName(m.getSupplier().getName())
-                                .leadTimeDays(lead)
-                                .suggestedOrderDate(nextIdealDate.minusDays(lead).toString())
-                                .build());
-                    }
+                    orderLines.add(
+                            blankLine(room, item, required, available,
+                                      shortfall, nextIdealStart));
+                    continue;
+                }
+
+                for (SupplierMapping map : mappings) {
+
+                    int      leadDays  = map.getSupplier().getAverageLeadTimeInDays();
+                    LocalDate orderDate = nextIdealStart.minusDays(leadDays);
+
+                    boolean reminderSet =
+                            reminderRepo.existsByGrowRoom_IdAndMaterialNameAndSupplierNameAndOrderDate(
+                                    room.getId(),
+                                    item.getName(),
+                                    map.getSupplier().getName(),
+                                    orderDate
+                            );
+
+                    orderLines.add(SupplierOrderLineDTO.builder()
+                            .itemName(item.getName())
+                            .unit(item.getUnit().toString())
+                            .requiredQty(required)
+                            .availableQty(available)
+                            .shortfall(shortfall)
+                            .supplierName(map.getSupplier().getName())
+                            .leadTimeDays(leadDays)
+                            .suggestedOrderDate(orderDate)
+                            .reminderExists(reminderSet)
+                            .build());
                 }
             }
 
-            plans.add(RoomMaterialPlanDTO.builder()
+            // ------- add plan for this room ----------------------------------------------
+            result.add(RoomMaterialPlanDTO.builder()
                     .roomId(room.getId())
                     .roomName(room.getName())
-                    .nextInoculationIdealDate(nextIdealDate)
+                    .nextInoculationIdealDate(nextIdealStart)
                     .orderLines(orderLines)
                     .build());
         }
-        return plans;
+        return result;
     }
 
+    // --------------------------------------------------------------------- //
+    //  Helpers
+    // --------------------------------------------------------------------- //
+
     /**
-     * Sum the requirement of this item across every active cycle for the room.
-     * (replace this stub with real logic / RawMaterialEstimate lookup if needed)
+     * Crude requirement estimate:  5 units per active cycle.
+     * Replace with a real formula or DB lookup when available.
      */
-    private double estimateRequirement(InventoryItem item, List<ProductionCycle> cycles) {
-        // TODO pull raw‑material estimates; fallback → 5 kg / pcs per cycle
+    private double estimateRequirement(InventoryItem item,
+                                       List<ProductionCycle> cycles) {
         return cycles.size() * 5.0;
     }
 
-    private SupplierOrderLineDTO blankLine(InventoryItem item, double required, double available,
-            double shortfall, LocalDate nextIdealDate) {
+    /**
+     * Creates the placeholder “no supplier” row so the material
+     * is never hidden from the operator.
+     */
+    private SupplierOrderLineDTO blankLine(GrowRoom room,
+                                           InventoryItem item,
+                                           double required,
+                                           double available,
+                                           double shortfall,
+                                           LocalDate orderDate) {
+
+        boolean reminderSet =
+                reminderRepo.existsByGrowRoom_IdAndMaterialNameAndSupplierNameAndOrderDate(
+                        room.getId(), item.getName(), "—", orderDate);
+
         return SupplierOrderLineDTO.builder()
                 .itemName(item.getName())
                 .unit(item.getUnit().toString())
@@ -124,7 +152,8 @@ public class OrderPlanningServiceImpl implements IOrderPlanningService {
                 .shortfall(shortfall)
                 .supplierName("—")
                 .leadTimeDays(0)
-                .suggestedOrderDate(nextIdealDate.toString())
+                .suggestedOrderDate(orderDate)
+                .reminderExists(reminderSet)
                 .build();
     }
 }
